@startuml WhiteSmoke
entity User {
    * id: VARCHAR <<PK>>
    --
    * name: VARCHAR
}

entity Notification {
    * id: INT <<PK>>
    --
    * title: VARCHAR
    * detail: TEXT
    * created_at: TIMESTAMP
    --
    user_id: VARCHAR(100) <<FK>>
    category_id: VARCHAR(100) <<FK>>
}

entity Category {
    * id: VARCHAR(100) <<PK>>
    --
    * name: VARCHAR(200)
}

entity NotificationRead {
    * id: INT AUTO_INCREMENT <<PK>>
    --
    * is_read BOOLEAN
    --
    * notification_id INT <<FK>>
    * user_id VARCHAR(100) <<FK>>
}

User ||--o{ Notification
Category ||--o{ Notification
Notification ||--o{ NotificationRead
User ||--o{ NotificationRead

@enduml